@@ -26,6 +26,8 @@
  * @summary Tests that JNDI/COS naming parser supports the syntax
  * defined in the new INS standard.
  * @modules java.corba/com.sun.jndi.cosnaming
+ * @compile --add-modules=java.corba CNNameParser.java
+ * @run main/othervm --add-modules=java.corba CNNameParser
  */
 
 import javax.naming.*;
